# midproject

./: CMakeLists.txt  CSVReader.cpp  CSVReader.h  Candlestick.cpp  Candlestick.h  CurrencySelector.cpp  CurrencySelector.h  MerkelMain.cpp  MerkelMain.h  OrderBook.cpp  OrderBook.h  OrderBookEntry.h  TextPlotter.cpp  TextPlotter.h  Wallet.cpp  Wallet.h  main.cpp
